--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container {
+  margin: 3rem !important;
+  font-size: 1.2rem;
+  color: #282c34;
+}
+
+.table-custom {
+  border-radius: 3rem !important;
+}
+
+
+.table-responsive.rounded {
+  overflow: hidden; 
+  border-radius: 8px; 
+}
+
+.table-rounded thead th:first-child {
+  border-top-left-radius: 8px;
+}
+
+.table-rounded thead th:last-child {
+  border-top-right-radius: 8px;
+}
+
+.table-rounded tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 8px;
+}
+
+.table-rounded tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 8px;
+}
+
+.text-pagination {
+  font-size: smaller;
+  margin: 4px;
+  margin-top: 7px !important;
+  color: white;
+}
